16.08.23 - Fix: Add Task, Update Task for ROLE_USER